Evolution #404: Inscription: confirmation de l'email et conséquences
Mise en place du système de SecurityContext et du javascript afin d'ouvrir l'ecran de confirmation de l'email.
Fait pour : proposition de tag

--- a/src/Muzich/CoreBundle/Resources/public/css/main.css
+++ b/src/Muzich/CoreBundle/Resources/public/css/main.css
@@ -2141,3 +2141,30 @@ div.choose_password
 {
   text-align: center;
 }
+
+div.center
+{
+  text-align: center;
+}
+
+div#email_not_confirmed_box input
+{
+  margin: 10px;
+}
+
+div#email_not_confirmed_box p.info
+{
+  font-style: italic;
+}
+
+span.message_success
+{
+  font-weight: bold;
+  color: green;
+}
+
+span.message_error
+{
+  font-weight: bold;
+  color: red;
+}
