--- a/src/Muzich/CoreBundle/Resources/views/Layout/head_js.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Layout/head_js.html.twig
@@ -123,6 +123,8 @@
   url_get_embed_for_element = "{{ path('url_get_embed_for_element') }}";
   
   url_subscription_or_login = "{{ path('subscribe_or_login') }}";
+  url_email_not_confirmed = "{{ path('email_not_confirmed') }}";
+  url_send_email_confirmation = "{{ path('send_email_confirmation') }}";
   
   config_player_youtube_width = "{{ player_config_youtube_width }}";
   config_player_youtube_height = "{{ player_config_youtube_height }}";
