--- a/src/Muzich/UserBundle/Resources/views/User/account.html.twig
+++ b/src/Muzich/UserBundle/Resources/views/User/account.html.twig
@@ -13,7 +13,7 @@
       <li>
         <b>{{ 'my_account.username'|trans({}, 'userui') }}</b>: {{ user.name }}
         {% if app.user.isUsernameUpdatable %}
-          (<a href="{{ path('change_username') }}">{{ 'my_account.change_username'|trans({}, 'userui') }}</a>)
+          (<a class="username_update" href="{{ path('change_username') }}">{{ 'my_account.change_username'|trans({}, 'userui') }}</a>)
         {% endif %}
       </li>
       <li>
