Evolution #687: Tags: bouton enlever tous + boutons favoris

--- a/src/Muzich/CoreBundle/Resources/public/css/main.css
+++ b/src/Muzich/CoreBundle/Resources/public/css/main.css
@@ -1996,12 +1996,13 @@ div#tourControls a#tourEnd
   float: right;
 }
 
-a.tags_prompt_helpbox
+a.tag_prompt_tool
 {
-  float: left;
+  float: right;
   margin-bottom: 0;
   margin-left: 0px;
   margin-top: 5px;
+  margin-right: 11px;
 }
 
 form#address_update input.intext
