--- a/src/Muzich/CoreBundle/Resources/views/SearchElement/form.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/SearchElement/form.html.twig
@@ -35,7 +35,8 @@
   </div>
   
   {% include "MuzichCoreBundle:Tag:tagsPrompt.html.twig" with { 
-    'form_name'     : form_name
+    'form_name'     : form_name,
+    'display_tools' : true
   } %}
   
   <div>
