Evolution #689: Faire disparaitre /hello

--- a/src/Muzich/CoreBundle/Resources/views/Layout/header.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Layout/header.html.twig
@@ -2,7 +2,7 @@
   
   {% include "MuzichCoreBundle:Language:languages.html.twig" %}
   
-  <a id="header_logo" href="{{ path('index') }}" title="">
+  <a id="header_logo" href="{{ path('home') }}" title="">
     <img src="{{ asset('img/header_logo.png') }}" alt="logo" />
   </a>
   
