--- a/src/Muzich/CoreBundle/Resources/views/Layout/head_js.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Layout/head_js.html.twig
@@ -118,6 +118,7 @@ $(document).ready(function(){
   url_element_get_stream_data = "{{ path('element_get_stream_data') }}";
   url_img_ajax_loader = "{{ asset('/bundles/muzichcore/img/ajax-loader.gif') }}";
   url_get_embed_for_element = "{{ path('url_get_embed_for_element') }}";
+  url_helpbox_tags_favorites = "{{ path('helpbox_tags_favorites') }}";
   
   url_subscription_or_login = "{{ path('subscribe_or_login') }}";
   url_email_not_confirmed = "{{ path('email_not_confirmed') }}";
