Evolution #708: Mettre le password_set a true si récupération

--- a/app/Resources/FOSUserBundle/views/Resetting/passwordAlreadyRequested.html.twig
+++ b/app/Resources/FOSUserBundle/views/Resetting/passwordAlreadyRequested.html.twig
@@ -1,5 +1,6 @@
 {% extends "MuzichUserBundle::layout.not_connected.html.twig" %}
 
+{% block mainbox_classes %}mainbox_padding{% endblock %}
 {% block fos_user_content %}
 <p>{{ 'resetting.password_already_requested'|trans({}, 'FOSUserBundle') }}</p>
 {% endblock fos_user_content %}
