--- a/app/Resources/FOSUserBundle/views/Resetting/checkEmail.html.twig
+++ b/app/Resources/FOSUserBundle/views/Resetting/checkEmail.html.twig
@@ -1,5 +1,6 @@
 {% extends "MuzichUserBundle::layout.not_connected.html.twig" %}
 
+{% block mainbox_classes %}mainbox_padding{% endblock %}
 {% block fos_user_content %}
 <p>
 {{ 'resetting.check_email'|trans({'%email%': ''}, 'FOSUserBundle') }}
