--- a/src/Muzich/CoreBundle/Resources/views/Layout/side.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Layout/side.html.twig
@@ -16,6 +16,13 @@
 
 {% else %}
   <div class="side_margin_top"></div>
+  
+  <div class="center">
+    <a id="know_more" class="helpbox button" href="{{ path('helpbox_bootstrap', {'ressource_id':'know_more'}) }}" title="{{ 'help.know_more'|trans({}, 'navigationui') }}">
+      {{ 'help.know_more'|trans({}, 'navigationui') }}
+    </a>
+  </div>
+  
 {% endif %}
 
   <div id="searchbox" class="nicebox">
