--- a/src/Muzich/CoreBundle/Resources/views/Component/element_add_buttons.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Component/element_add_buttons.html.twig
@@ -5,7 +5,7 @@
   {% set close_class = ''%}
 {% endif %}
 
-<a href="#" id="element_add_link" class="button gradient {{ add_class }} {% if not app.user %}mustbeconnected{% endif %}">
+<a href="#" id="element_add_link" class="button gradient {{ add_class }}">
   {{ 'home.add_element'|trans({}, 'navigationui') }}
   <img src="{{ asset('/img/icon_dart_right_white.png') }}" alt="" />
 </a>
