--- a/src/Muzich/CoreBundle/Resources/views/Layout/side.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Layout/side.html.twig
@@ -15,11 +15,15 @@
   {% endif %}
 
 {% else %}
+
   <div class="side_margin_top"></div>
   
   <div class="center">
     <a id="know_more" class="helpbox button" href="{{ path('helpbox_bootstrap', {'ressource_id':'know_more'}) }}" title="{{ 'help.know_more'|trans({}, 'navigationui') }}">
       {{ 'help.know_more'|trans({}, 'navigationui') }}
+    </a>
+    <a id="launch_tour" class="button" href="#" title="{{ 'help.maunch_tour'|trans({}, 'navigationui') }}">
+      {{ 'help.launch_tour'|trans({}, 'navigationui') }}
     </a>
   </div>
   
@@ -28,6 +32,7 @@
   <div id="searchbox" class="nicebox">
     {% render "MuzichCoreBundle:Search:renderGlobalSearchForm" %}
   </div>
+  
   
   {% include 'MuzichCoreBundle:Layout:social.html.twig' %}
 
