Anomalie #718: Page d'eereur: liens non connecté
Mise en place d'un layout adapté lors de l'affichage des erreurs.

--- a/app/Resources/TwigBundle/views/Exception/error404.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error404.html.twig
@@ -1,4 +1,4 @@
-{% extends 'MuzichCoreBundle::layout.html.twig' %}
+{% extends 'MuzichCoreBundle::layout_error.html.twig' %}
 
 {% block title %}{{ 'error_page.notfound.title'|trans({}, 'navigationui') }}{% endblock %}
 {% block mainbox_classes %}mainbox_padding{% endblock %}
