Evolution #727: Améliorer le message helper ajout

--- a/src/Muzich/CoreBundle/Resources/views/Element/form.add.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Element/form.add.html.twig
@@ -15,9 +15,11 @@
 
   <span class="help">
     {{ 'element_add.url.help'|trans({}, 'userui') }}
-    <a href="{{ path('helpbox_bootstrap', {'ressource_id':'element_add_url'}) }}" class="helpbox">
-      {{ 'element_add.url.more_help'|trans({}, 'userui') }}
-    </a>
+    <strong>
+      <a href="{{ path('helpbox_bootstrap', {'ressource_id':'element_add_url'}) }}" class="helpbox">
+        {{ 'element_add.url.more_help'|trans({}, 'userui') }}
+      </a>
+      </strong>
   </span>
   
 
