--- a/src/Muzich/CoreBundle/Resources/views/Helpbox/element_add_url.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Helpbox/element_add_url.html.twig
@@ -1,6 +1,11 @@
 <h1>{{ 'help.element_add_url.title1'|trans({}, 'text') }}</h1>
 
-<p>{{ 'help.element_add_url.text1'|trans({}, 'text') }}</p>
+<p>
+  {{ 'help.element_add_url.text1'|trans({}, 'text') }}
+  <strong>
+    {{ 'help.element_add_url.text1_plugin'|trans({}, 'text') }}
+  </strong>
+</p>
 
 <h2>{{ 'help.element_add_url.title2'|trans({}, 'text') }}</h2>
 
