--- a/src/Muzich/AdminBundle/Resources/views/base_admin_assetic_less.html.twig
+++ b/src/Muzich/AdminBundle/Resources/views/base_admin_assetic_less.html.twig
@@ -50,6 +50,13 @@
     
     <script type="text/javascript" src="{{ asset('js/admin.js') }}"></script>
     
+    <style>
+      a.moderate_accept, a.moderate_refuse
+      {
+        margin-right: 10px;
+      }
+    </style>
+
   </head>
 
   <body>
