--- a/src/Muzich/PlaylistBundle/Resources/views/Show/show.html.twig
+++ b/src/Muzich/PlaylistBundle/Resources/views/Show/show.html.twig
@@ -18,18 +18,24 @@
     } %}
     
     {% if playlist.elements|length %}
-      <ul class="playlist_elements">
-        {% for element in playlist.elements %}
-          <li class="playlist_element">
-            <a class="autoplay_playlist" href="{{ path('playlist_datas_for_autoplay', { 'playlist_id' : playlist.id, 'offset' : loop.index0 }) }}">
-              play
-            </a>
-            <a class="open_element" href="{{ path('element_get_one', { 'element_id' : element.id }) }}" data-id="{{ element.id }}">
-              {{ element.name }}
-            </a>
-          </li>
-        {% endfor %}
-      </ul>
+      <form action="{{ path('playlist_update_order', { 'playlist_id' : playlist.id }) }}" method="post">
+        <ul class="playlist_elements">
+          {% for element in playlist.elements %}
+            <li class="playlist_element">
+              <input type="hidden" name="elements[]"  value="{{ element.id }}" />
+              <a class="autoplay_playlist" href="{{ path('playlist_datas_for_autoplay', { 'playlist_id' : playlist.id, 'offset' : loop.index0 }) }}">
+                play
+              </a>
+              <a class="open_element" href="{{ path('element_get_one', { 'element_id' : element.id }) }}" data-id="{{ element.id }}">
+                {{ element.name }}
+              </a>
+              <a class="remove_element" href="{{ path('playlist_remove_element', { 'playlist_id' : playlist.id, 'element_id' : element.id }) }}">
+                X
+              </a>
+            </li>
+          {% endfor %}
+        </ul>
+      </form>
     {% endif %}
   
   </div>
