--- a/src/Muzich/PlaylistBundle/Resources/views/Show/user.html.twig
+++ b/src/Muzich/PlaylistBundle/Resources/views/Show/user.html.twig
@@ -18,15 +18,34 @@
           {{ playlist.name }}
         </a>
         
-        {% if playlist.owned(app.user) %}
-          <a class="" href="{{ path('playlist_delete', { 'playlist_id' : playlist.id }) }}" >
-            X
-          </a>
-        {% else %}
-          <a class="" href="{{ path('playlist_unpick', { 'playlist_id' : playlist.id }) }}" >
-            X
-          </a>
+        {% if app.user %}
+          {% if viewed_user.id == app.user.id %}
+            {% if playlist.owned(app.user) %}
+              <a class="playlist_delete" href="{{ path('playlist_delete', { 'playlist_id' : playlist.id }) }}" >
+                X
+              </a>
+            {% else %}
+              <a class="playlist_unpick" href="{{ path('playlist_unpick', { 'playlist_id' : playlist.id }) }}" >
+                X
+              </a>
+            {% endif %}
+          {% endif %}
         {% endif %}
+        
+        {% if app.user %}
+          {% if not playlist.owned(app.user) and viewed_user.id != app.user.id %}
+            {% if not app.user.havePlaylistPicked(playlist) %}
+              <a class="playlist_pick" href="{{ path('playlist_pick', { 'playlist_id' : playlist.id }) }}" >
+                P
+              </a>
+            {% else %}
+              <a class="playlist_unpick" href="{{ path('playlist_unpick', { 'playlist_id' : playlist.id }) }}" >
+                uP
+              </a>
+            {% endif %}
+          {% endif %}
+        {% endif %}
+      
         
         {% include "MuzichCoreBundle:Tag:tag_cloud.html.twig" with {
           'tags' : playlist.tags
